apps/system/overlays/dev/metrics-server/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-server
  namespace: metrics-server
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: metrics-server
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
